# help-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/rules/code-style/: conditional-expressions.md  documentation.md  imports.md
.claude/rules/testing/: assertions.md  end-to-end.md  style.md
.github/workflows/: deploy.yml
app/: access.py  apidocs.py  auth.py  cache.py  config.py  images.py  intercom.py  observability.py  server.py
tests/: conftest.py  test_access.py  test_apidocs.py  test_auth.py  test_cache.py  test_config.py  test_images.py  test_integration.py  test_intercom.py  test_observability.py  test_server.py
